using Virtual Threads instead of normal Threads for more code improvement and more performance Virtual Thread are lightweight compared to the OS Threads so this`s the magic of Virtual Thread fixed a lot of problems